Allow for MetadataClientCreators to be discovered based on priority; add additional logging; move kafka.consumer.class config to PscConfiguration; add unit tests for metadata