@@ -3,26 +3,32 @@ package com.pinterest.psc.metadata.creation;
 import com.pinterest.psc.logging.PscLogger;
 import org.reflections.Reflections;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.NavigableMap;
 import java.util.Set;
+import java.util.TreeMap;
 
 /**
  * Manages the different {@link PscBackendMetadataClientCreator} implementations and provides a registry of them.
  *
  * This class is responsible for finding and registering the different {@link PscBackendMetadataClientCreator} implementations
- * that are annotated with {@link PscMetadataClientCreatorPlugin}. Each backend can have at most one implementation of
- * {@link PscBackendMetadataClientCreator} that is returned by this class. To access all the backend creators, keyed by
- * the backend name, use {@link #getBackendCreators()}.
+ * that are annotated with {@link PscMetadataClientCreatorPlugin}. Each backend can have one or more implementations of
+ * {@link PscBackendMetadataClientCreator} that are returned by this class, ordered by the plugin priority (ascending) within
+ * each backend. To access all the backend creators, keyed by the backend name, use {@link #getBackendCreators()}.
  */
 public class PscMetadataClientCreatorManager {
 
     private static final PscLogger logger = PscLogger.getLogger(PscMetadataClientCreatorManager.class);
-    private final Map<String, PscBackendMetadataClientCreator> backendMetadataClientCreatorMap =
+    private final Map<String, List<PscBackendMetadataClientCreator>> backendMetadataClientCreatorMap =
             findAndRegisterMetadataClientCreators(PscMetadataClientCreatorManager.class.getPackage().getName());
 
-    private static Map<String, PscBackendMetadataClientCreator> findAndRegisterMetadataClientCreators(String packageName) {
-        Map<String, PscBackendMetadataClientCreator> backendCreatorRegistry = new HashMap<>();
+    private static Map<String, List<PscBackendMetadataClientCreator>> findAndRegisterMetadataClientCreators(String packageName) {
+        Map<String, List<PscBackendMetadataClientCreator>> backendCreatorRegistry = new HashMap<>();
         Reflections reflections = new Reflections(packageName.trim());
         Set<Class<?>> annotatedClasses = reflections.getTypesAnnotatedWith(PscMetadataClientCreatorPlugin.class);
         for (Class<?> annotatedClass : annotatedClasses) {
@@ -36,20 +42,33 @@ public class PscMetadataClientCreatorManager {
                 logger.warn("Ignoring due to empty backend for plugin: " + annotatedClass.getName());
                 continue;
             }
-            if (backendCreatorRegistry.containsKey(backend)) {
-                logger.error("Output plugin alias '" + backend + "' already exists: " + annotatedClass.getName());
-                System.exit(-1);
-            }
             try {
-                backendCreatorRegistry.put(backend, (PscBackendMetadataClientCreator) annotatedClass.newInstance());
-            } catch (IllegalAccessException | InstantiationException e) {
+                PscBackendMetadataClientCreator creator =
+                        (PscBackendMetadataClientCreator) annotatedClass.getDeclaredConstructor().newInstance();
+                List<PscBackendMetadataClientCreator> creators =
+                        backendCreatorRegistry.computeIfAbsent(backend, ignored -> new ArrayList<>());
+                creators.add(creator);
+                creators.sort(Comparator.comparingInt(PscMetadataClientCreatorManager::getPriority));
+            } catch (ReflectiveOperationException e) {
                 throw new RuntimeException("Failed to register PscBackendMetadataClientCreator", e);
             }
         }
-        return backendCreatorRegistry;
+        backendCreatorRegistry.replaceAll((backend, creators) ->
+                Collections.unmodifiableList(new ArrayList<>(creators)));
+        return Collections.unmodifiableMap(backendCreatorRegistry);
     }
 
-    public Map<String, PscBackendMetadataClientCreator> getBackendCreators() {
+    private static int getPriority(PscBackendMetadataClientCreator creator) {
+        PscMetadataClientCreatorPlugin annotation = creator.getClass().getAnnotation(PscMetadataClientCreatorPlugin.class);
+        if (annotation == null) {
+            logger.warn("Creator missing PscMetadataClientCreatorPlugin annotation; defaulting priority to Integer.MAX_VALUE: "
+                    + creator.getClass().getName());
+            return Integer.MAX_VALUE;
+        }
+        return annotation.priority();
+    }
+
+    public Map<String, List<PscBackendMetadataClientCreator>> getBackendCreators() {
         return backendMetadataClientCreatorMap;
     }
 }
